syntax = "proto3";
option go_package = "transport.com/monitoringGrpc";

import "message.proto";

service MonitoringGrpcService {
  rpc GetAllInfo(AllInfoRequest) returns (AllInfoResponse);
}